html dosyası düzenleniyor

--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="tr">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>İsmail SARI Kişisel İnternet Sayfası</title>
-    <!-- <meta name="description" content="A description of the page"> -->
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-      <header>
-        <nav>
-          <ul>
-            <li>
-              Anasayfa
-            </li>
-            <li>
-              Anasayfa
-            </li>
-            <li>
-              Anasayfa
-            </li>
-          </ul>
-        </nav>
-        
-      </header>
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<title>İsmail SARI Kişisel İnternet Sayfası</title>
+		<!-- <meta name="description" content="A description of the page"> -->
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<header>
+			<!-- Navigasyon -->
+			<nav>
+				<ul>
+					<li><a href="#">Eğitim</a></li>
+				    <li><a href="#">Yayın</a></li>
+				    <li><a href="#">Hobi</a></li>
+				    <li><a href="#">Galeri</a></li>
+				    <li><a href="#">İletişim</a></li>
+		      	</ul>
+		    </nav>
+		</header>
+		<div class="cv-download">
+			<img src="assets/images/hero--large.jpg">
+			<div>
+				<h1>Your clarity.</h1>
+				<h2>One trip away.</h2>
+      			<p>We create soul restoring journeys that inspire you to be you.</p>
+      			<p><a href="#">Get Started Today</a></p>
+    		</div>
+		</div>
+		
+		
+		<footer>
+		</footer>
+	  </body>
 </html>
